fix(LandingSection1): overflow issue on .video

--- a/src/components/site/landing/LandingSection1/style.module.scss
+++ b/src/components/site/landing/LandingSection1/style.module.scss
@@ -5,6 +5,7 @@
 
 .video {
   border: none;
+  max-width: 80vw;
   -webkit-mask-image: -webkit-radial-gradient(white, black);
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
